# vcs

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: deploy-docs.yml
docs/: api.html  example.html  index.html  playground.html  requirements.txt
docs/api/: api.html
docs/source/: conf.py  getting_started.rst  index.rst
docs/source/_static/: custom.css
docs/sphinx/: requirements.txt
docs/sphinx/source/: conf.py
docs/widgets/distance-nas/: distance-nas.html
docs/widgets/las/: index2.html
docs/widgets/mapping-window/: index2.html
docs/widgets/nas/: index.html
docs/widgets/vcs/: index3.html
docs/widgets/window-regularizer/: index2.html
src/vcs/: __init__.py
src/vcs/_metrics/_nas/_nas_components/_line_nas/_actual_line_length/: _actual_line_length.py
src3/vcs/: __init__.py  scorer.py
tests/: test_vcs_basic.py
website/: index.html  paper.html  script.js
website/widgets/best-match/: best-match.html
website/widgets/line-nas/: index.html
workflows/: deploy-docs.yml
