[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vcs-metrics"
version = "0.1.3"
description = "Video Comprehension Score (VCS) - A comprehensive metric for evaluating narrative similarity between reference and generated text"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Harsh Dubey", email = "had7143@gmail.com"},
]
maintainers = [
    {name = "Chulwoo Pack", email = "chulwoo.pack@sdstate.edu"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "text-similarity", 
    "narrative-analysis", 
    "nlp", 
    "video-comprehension", 
    "text-evaluation",
    "semantic-similarity",
    "alignment-metrics"
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "isort>=5.0",
    "flake8>=3.8",
    "mypy>=0.910",
    "pre-commit>=2.0",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=0.15",
]
all = [
    "vcs-metrics[dev,docs]"
]

[project.urls]
Homepage = "https://github.com/yourusername/vcs-metrics"
Documentation = "https://vcs-metrics.readthedocs.io"
Repository = "https://github.com/yourusername/vcs-metrics.git"
"Bug Tracker" = "https://github.com/yourusername/vcs-metrics/issues"
Changelog = "https://github.com/yourusername/vcs-metrics/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=vcs",
    "--cov-report=html",
    "--cov-report=term-missing"
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true